--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,14 @@
 <header class="container mt-3 mb-5 text-center mb-5">
   <img title="Logo" src="assets/images/lehrpool-nrw.png" alt="Logo" class="logo" width="70%">
+  Change Language : <select #selLang (change)="translate.use(selLang.value)">
+    <option *ngFor="let language of translate.getLangs()" [value]="language">{{ language }}</option>
+  </select>
 </header>
 <div class="container content white-font">
   <form (ngSubmit)="login()" [formGroup]="loginForm">
     <div class="row">
       <div class="col-12 col-lg-6 text-center">
-        <h3>Zugangsdaten</h3>
+        <h3>{{ 'login.login' | translate }}</h3>
         <br>
         <div class="form-group row">
           <label for="identityProvider" class="col-12 col-sm-4 col-form-label text-left"><b>Indentity
@@ -17,7 +20,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="username" class="col-12 col-sm-4 col-form-label text-left"><b>Benutzername</b></label>
+          <label for="username" class="col-12 col-sm-4 col-form-label text-left"><b>{{ 'login.username' | translate }}</b></label>
           <div class="col-12 col-sm-8">
             <input type="text" class="form-control text-box" id="username" formControlName="username"
                    [ngClass]="{ 'is-invalid': submitted && form.username.errors }">
@@ -26,12 +29,12 @@
         <div *ngIf="submitted && form.username.errors" class="invalid form-group row">
           <div class="col-12 offset-sm-4 text-left">
             <span *ngIf="form.username.errors.required">
-              <i class="fa fa-exclamation-triangle"></i> Benutzername darf nicht leer sein
+              <i class="fa fa-exclamation-triangle"></i> {{ 'login.namenotempty' | translate }}
             </span>
           </div>
         </div>
         <div class="form-group row">
-          <label for="password" class="col-12 col-sm-4 col-form-label text-left"><b>Passwort</b></label>
+          <label for="password" class="col-12 col-sm-4 col-form-label text-left"><b>{{ 'login.pwd' | translate }}</b></label>
           <div class="col-12 col-sm-8">
             <input type="password" class="form-control text-box" id="password" formControlName="password"
                    [ngClass]="{ 'is-invalid': submitted && form.password.errors }">
@@ -40,21 +43,21 @@
         <div *ngIf="submitted && form.password.errors" class="invalid form-group row">
           <div class="col-12 offset-sm-4 text-left">
             <span *ngIf="form.password.errors.required">
-              <i class="fa fa-exclamation-triangle"></i> Passwort darf nicht leer sein
+              <i class="fa fa-exclamation-triangle"></i> {{ 'login.pwdnotempty' | translate }}
             </span>
           </div>
         </div>
         <div class="invalid form-group row" *ngIf="loginfailed">
           <div class="col-11 offset-sm-4 text-left">
             <span>
-              <i class="fa fa-exclamation-triangle"></i> Ungültige Anmeldedaten
+              <i class="fa fa-exclamation-triangle"></i> {{ 'login.loginfailed' | translate }}
             </span>
           </div>
         </div>
         <div class="invalid form-group row" *ngIf="satfailed">
           <div class="col-11 offset-sm-4 text-left">
             <span>
-              <i class="fa fa-exclamation-triangle"></i> Verbindung zum Satellitenserver ist nicht möglich
+              <i class="fa fa-exclamation-triangle"></i> {{ 'login.server' | translate }}
             </span>
           </div>
         </div>
@@ -69,7 +72,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-6">
-        <h3 class="text-center">Authentifizierungsart</h3>
+        <h3 class="text-center">{{ 'login.auth' | translate }}</h3>
         <br>
         <fieldset class="form-group text-left">
           <div class="col-12 offset-lg-2 col-lg-8 ">
@@ -77,27 +80,27 @@
               <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
                      value="DFN-AAI" disabled>
               <label class="form-check-label" for="gridRadios1">
-                Authentifizierung über DFN-AAI
+                {{ 'login.DFN' | translate }}
               </label>
             </div>
             <div class="form-check radio">
               <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
                      value="Test-Zugang" checked>
               <label class="form-check-label" for="gridRadios2">
-                Test-Zugang mit festem Benutzer
+                {{ 'login.test' | translate }}
               </label>
             </div>
             <div class="form-check disabled radio">
               <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3"
                      value="Satellit" disabled>
               <label class="form-check-label" for="gridRadios3">
-                Direkter Zugang zum Satelliten
+                {{ 'login.sat' | translate }}
               </label>
             </div>
           </div>
           <div class="form-group row">
             <div class="col-4 mt-3 col-sm-12 offset-lg-2">
-              <b><a class="button text-box" href="https://master.lehrpool.hochschule-rhein-waal.de/webif/">Registrieren</a></b>
+              <b><a class="button text-box" href="https://master.lehrpool.hochschule-rhein-waal.de/webif/">{{ 'login.register' | translate }}</a></b>
             </div>
           </div>
 
