add translation for aenderungen-verwerfen-dialog

--- a/src/app/aenderungen-verwerfen-dialog/aenderungen-verwerfen-dialog.component.html
+++ b/src/app/aenderungen-verwerfen-dialog/aenderungen-verwerfen-dialog.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Änderungen verwerfen</h1>
+<h1 mat-dialog-title> {{ 'changes-dialog.discard' | translate }} </h1>
 <hr class="whiteHr">
 <div mat-dialog-content>
-  <p>Möchten Sie die vorgenommenen Änderungen wirklich verwerfen?</p>
+  <p> {{ 'changes-dialog.question' | translate }} </p>
 </div>
 
 <div mat-dialog-actions class="mt-5" class="offset-7">
