add translation for change-owner

--- a/src/app/change-owner/change-owner.component.html
+++ b/src/app/change-owner/change-owner.component.html
@@ -1,10 +1,10 @@
-<h1 mat-dialog-title>Besitzer ändern</h1>
+<h1 mat-dialog-title> {{ 'changeowner.owner' | translate }}</h1>
 <hr class="whiteHr">
 <div mat-dialog-content>
-  <p>Wählen Sie einen Benutzer aus, dem Sie die Besitzrechte übertragen wollen:</p>
+  <p> {{ 'changeowner.choose' | translate }} </p>
   <form [formGroup]="changeOwnerForm">
     <div class="form-group row">
-      <label for="search" class="col-12 col-xl-2"><b>Suche</b></label>
+      <label for="search" class="col-12 col-xl-2"><b> {{ 'changeowner.search' | translate }} </b></label>
       <div class="col-12 col-xl-10">
         <input type="text" class="form-control mr-5 mr-lg-0" id="search" (keydown.enter)="$event.preventDefault()" (keyup)="applyFilter($event.target.value)">
       </div>
@@ -32,7 +32,7 @@
   </form>
 </div>
 <div mat-dialog-actions class="mt-5" class="offset-5">
-  <button class="text-box button mb-3" (click)="onNoClick()"><b> Abbrechen</b></button>
+  <button class="text-box button mb-3" (click)="onNoClick()"><b> {{ 'changeowner.cancel' | translate }} </b></button>
   <button class="text-box mb-3" [disabled]="!change"
           [ngClass]="{ 'butdis': !change, 'button': change}"
           (click)="submit()"><b> Besitzer festlegen</b></button>
