add translation for change-vm

--- a/src/app/change-vm/change-vm.component.html
+++ b/src/app/change-vm/change-vm.component.html
@@ -1,10 +1,10 @@
-<h1 mat-dialog-title>Verknüpfte VM ändern</h1>
+<h1 mat-dialog-title> {{ 'changevm.change' | translate }} </h1>
 <hr class="whiteHr">
 <div mat-dialog-content>
-  <p>Wählen Sie eine VM aus, die Sie mit dieser Veranstaltung verknüpfen wollen:</p>
+  <p> {{ 'changevm.choose' | translate }} </p>
   <form [formGroup]="changeVmForm">
     <div class="form-group row">
-      <label for="search" class="col-12 col-xl-2"><b>Suche</b></label>
+      <label for="search" class="col-12 col-xl-2"><b> {{ 'changevm.search' | translate }} </b></label>
       <div class="col-12 col-xl-10">
         <input type="text" class="form-control mr-5 mr-lg-0" id="search" (keydown.enter)="$event.preventDefault()" (keyup)="applyFilter($event.target.value)">
       </div>
@@ -34,33 +34,33 @@
 
         <!-- Besitzer Column -->
         <ng-container matColumnDef="besitzer">
-          <mat-header-cell *matHeaderCellDef> Besitzer</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> {{ 'changevm.owner' | translate }}</mat-header-cell>
           <mat-cell class="mat-cell-mini-list" *matCellDef="let element">{{element.ownerId}}</mat-cell>
         </ng-container>
 
         <!-- Geändert Column -->
         <ng-container matColumnDef="geaendert">
-          <mat-header-cell *matHeaderCellDef> Geändert</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> {{ 'changevm.changed' | translate }}</mat-header-cell>
           <mat-cell class="mat-cell-mini-list"
                     *matCellDef="let element">{{element.updateTime}}</mat-cell>
         </ng-container>
 
         <!-- Ablaufdatum Column -->
         <ng-container matColumnDef="ablaufdatum">
-          <mat-header-cell *matHeaderCellDef> Ablaufdatum</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> {{ 'changevm.expiration' | translate }} </mat-header-cell>
           <mat-cell class="mat-cell-mini-list"
                     *matCellDef="let element">{{element.expireTime}}</mat-cell>
         </ng-container>
 
         <!-- Größe Column -->
         <ng-container matColumnDef="groesse">
-          <mat-header-cell *matHeaderCellDef> Größe</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> {{ 'changevm.size' | translate }} </mat-header-cell>
           <mat-cell class="mat-cell-mini-list" *matCellDef="let element">{{element.fileSize}}</mat-cell>
         </ng-container>
 
         <!--Verwendbar Column-->
         <ng-container matColumnDef="verwendbar">
-          <mat-header-cell *matHeaderCellDef> Verwendbar</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> {{ 'changevm.usable' | translate }} </mat-header-cell>
           <mat-cell class="mat-cell-mini-list" *matCellDef="let element"><input type="checkbox"
                                                                                 [checked]="element.isValid"
                                                                                 disabled></mat-cell>
@@ -74,10 +74,9 @@
   </form>
 </div>
 <div mat-dialog-actions class="mt-5" class="offset-5">
-  <button class="text-box button mb-3" (click)="onNoClick()"><b> Abbrechen</b></button>
+  <button class="text-box button mb-3" (click)="onNoClick()"><b> {{ 'changevm.cancel' | translate }} </b></button>
   <button class="text-box mb-3" [disabled]="!change"
           [ngClass]="{ 'butdis': !change, 'button': change}"
-          (click)="submit()"><b> VM festlegen</b></button>
+          (click)="submit()"><b> {{ 'changevm.set' | translate }} </b></button>
 </div>
-
 
