add translation for nutzungsvereinbarung

--- a/src/app/datenschutzerklaerung/datenschutzerklaerung.component.html
+++ b/src/app/datenschutzerklaerung/datenschutzerklaerung.component.html
@@ -1,84 +1,32 @@
 <div class="container-fluid mt-5 content white-font smallFluidContainer mb-5">
   <div class="row">
     <div class="col-12">
-      <h3>
-        Datenschutzerklärung
-      </h3>
-      <div>
-        <hr class="whiteHr">
-        <h5>Datenschutz</h5>
-        <p>
-          Wenn Sie sich an der bwLehrpool-Suite anmelden bzw. diese nutzen, werden verschiedene Informationen
-          über Sie erfasst und gespeichert. Die nachfolgenden Punkte sollen Ihnen helfen zu verstehen, welche
-          Daten zu welchem Zweck verwendet werden und wohin Sie sich bei Fragen wenden können.
-        </p>
-      </div>
-      <div>
-        <hr class="whiteHr">
-        <h5>Was wird gesammelt?</h5>
-        <p>
-          Beim Login werden Name, E-Mail, Hochschule sowie Zeitpunkt des letzten Logins gespeichert und einer
-          eindeutigen Nutzer-ID zugeordnet. Dies umfasst auch Informationen darüber, wann Sie sich für die
-          Nutzung erstmalig registriert haben. Außerdem werden Informationen über einige Ihrer Aktivitäten
-          innerhalb der bwLehrpool-Suite erfasst (beispielsweise wenn Sie eine VM hochladen oder löschen).
-        </p>
-      </div>
-      <div>
-        <hr class="whiteHr">
-        <h5>Wozu werden diese Daten gesammelt?</h5>
-        <p>
-          Die Informationen sind notwendig, um VMs und Veranstaltungen Ihnen bzw. Ihren Kollegen eindeutig
-          zuordnen und ggf. bei rechtlichen Verstößen eingreifen zu können.
+      <h4>
+        {{ 'useragreement.agreement' | translate }}
+      </h4>
+      <hr class="whiteHr">
+      <p>
+        bwLehrpool-Suite (Dozentenmodul) <br>
+        Copyright © 2016 Universität Freiburg
+      </p>
+      <p>
+        {{ 'useragreement.notice1' | translate }} <br>
 
-          Wenn Sie VMs herunterladen (vom Satellitenserver oder öffentlichen Speicher), möchten Sie sicherlich
-          wissen, von wem eine VM erstellt wurde und wen Sie ggf. kontaktieren können, falls die VM nicht wie
-          erwartet funktioniert.
+        {{ 'useragreement.notice2' | translate }}<br>
+      </p>
+      <p>
+        {{ 'useragreement.licence' | translate }} <br>
 
-          Außerdem sind Nutzungsdaten für Diagnosezwecke wichtig, damit ein Administrator Ihnen helfen kann,
-          falls Sie z.B. Ihre VM nicht mehr finden können und vermuten, dass diese von jemandem
-          fälschlicherweise gelöscht wurde.
-        </p>
-      </div>
-      <div>
-        <hr class="whiteHr">
-        <h5>Mit wem werden diese Daten geteilt?</h5>
-        <p>
-          Die erhobenen Daten werden ausschließlich auf dem Satellitenserver gespeichert, mit dem Sie sich
-          während des Logins verbunden haben. Dieser steht in der Regel unter der Kontrolle des Rechenzentrums
-          Ihrer Hochschule.
+        Dieses Programm ist freie Software. Es kann unter den Bedingungen der GNU General Public License
+        (GPL) Version 2 verändert und weitergegeben werden. Der vollständige Text der GNU General Public
+        Licence der Version 2 (GPL2) kann hier <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html" target="_blank">http://www.gnu.org/licenses/old-licenses/gpl-2.0.html</a>
+        eingesehen werden. <br>
 
-          Bei der erstmaligen Nutzung der Suite wurden Sie aufgefordert, sich über ein Webportal zu
-          registrieren. Dies ist notwendig, um Ihre Zustimmung zur Speicherung und Verarbeitung Ihrer Daten
-          zum Zweck des hochschulübergreifenden VM-Austauschs einzuholen. Die dort angegebenen Informationen
-          stehen unter der Verwaltung des bwLehrpool-Teams in Freiburg.
+        {{ 'useragreement.notice4' | translate }}
 
-          Wenn Sie eine VM auf den öffentlichen Speicher hochladen, wird die VM sowie damit verknüpfte
-          Metadaten (Name des Besitzers/Erstellers, Zeitpunkt der Erstellung und letzten Änderung) auf den
-          zentralen Server des bwLehrpool-Teams in Freiburg übertragen. Auch Nutzer anderer an bwLehrpool
-          teilnehmenden Hochschulen können nun Ihre VM sowie die damit verbundenen (Kontakt-)Daten einsehen.
-        </p>
-      </div>
-      <div>
-        <hr class="whiteHr">
-        <h5>Wie lange werden Daten gespeicher?</h5>
-        <p>
-          Informationen werden gespeichert, bis sie nicht mehr benötigt werden, um die notwendige
-          Funktionalität bereitzustellen. Dies hängt auch von Faktoren wie der Art der Informationen, warum
-          sie gesammelt und verarbeitet werden sowie den relevanten rechtlichen oder betrieblichen
-          Speicherbedürfnissen ab.
-        </p>
-      </div>
-      <div>
-        <hr class="whiteHr">
-        <h5>Wohin kann ich mich bei Fragen wenden?</h5>
-        <p>
-          Kontaktieren Sie als erstes Ihr Rechenzentrum. In der Regel wird dort der Satellitenserver, mit dem
-          sich Ihre bwLehrpool-Suite standardmäßig verbindet, betrieben. Falls Sie dort keinen Ansprechpartner
-          finden, können Sie sich an das Entwickler-Team von bwLehrpool (bwlehrpool@hs-offenburg.de) wenden.
-        </p>
-      </div>
 
+      </p>
     </div>
   </div>
 
-</div>
+</div> <!-- container -->
