--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -5,7 +5,7 @@
       <div class="col-12">
         <div class="form-group row">
           <div class="col-10 ">
-            <h4>Satellitenserver auswählen</h4>
+            <h4>  {{ 'logindialog.setSat' | translate }} </h4>
           </div>
           <div class="col-2 text-right">
             <i class="fa fa-times fontawesomeicons" (click)="onNoClick()"></i>
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group row">
           <div class="col-12">
-            <h5>Vorgegebene Server</h5>
+            <h5> {{ 'logindialog.givenSat' | translate }} </h5>
           </div>
         </div>
         <div class="form-group row" *ngFor="let sattelite of this.user.satellites">
@@ -27,7 +27,7 @@
         <div class="form-group row">
           <div class="col-12">
             <hr class="whiteHr">
-            <h5>Server-Adresse selbst eingeben</h5>
+            <h5> {{ 'logindialog.serveradress' | translate }} </h5>
           </div>
         </div>
         <div class="form-group row">
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group row">
           <div class="col-12 text-right">
-            <button class="button text-box darkFont" type="submit"><b>Weiter</b></button>
+            <button class="button text-box darkFont" type="submit"><b> {{ 'logindialog.next' | translate }} </b></button>
           </div>
         </div>
       </div>
