--- a/src/app/nutzungsvereinbarung/nutzungsvereinbarung.component.html
+++ b/src/app/nutzungsvereinbarung/nutzungsvereinbarung.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <h4>
-        Nutzungsvereinbarung
+        {{ 'useragreement.agreement' | translate }}
       </h4>
       <hr class="whiteHr">
       <p>
@@ -10,32 +10,19 @@
         Copyright © 2016 Universität Freiburg
       </p>
       <p>
-        Die Verwendung dieses Programms ist nur in Abstimmung mit der jeweils beteiligten
-        Hochschulinstitution zulässig und unterliegt deren Bestimmungen und Einschränkungen. Im Rahmen des
-        bwLehrpool-Systems erstellte und bereitgestellte Virtuelle Maschinen, die unfrei lizensierte
-        Software enthalten, dürfen nur mit Erlaubnis bzw. Lizenzierung der betreffenden Rechteinhaber
-        eingesetzt und weitergegeben werden. <br>
+        {{ 'useragreement.notice1' | translate }} <br>
 
-        Insbesondere wird ausdrücklich darauf hingewiesen, dass die Verantwortung in Bezug auf eventuell
-        notwendige Lizenzierung sämtlicher Software innerhalb einer Virtuellen Maschine, regelmäßiger
-        Aktualisierung und rechtzeitigen Einspielens von Sicherheitsupdates ausschließlich beim erstellenden
-        Personal liegt. <br>
+        {{ 'useragreement.notice2' | translate }}<br>
       </p>
       <p>
-        Lizenzierung des Programms <br>
+        {{ 'useragreement.licence' | translate }} <br>
 
         Dieses Programm ist freie Software. Es kann unter den Bedingungen der GNU General Public License
         (GPL) Version 2 verändert und weitergegeben werden. Der vollständige Text der GNU General Public
         Licence der Version 2 (GPL2) kann hier <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html" target="_blank">http://www.gnu.org/licenses/old-licenses/gpl-2.0.html</a>
         eingesehen werden. <br>
 
-        Es wird, soweit gesetzlich zulässig, keinerlei Gewährleistung für dieses Programm, weder
-        ausdrücklich noch implizit, geleistet. Der Urheberrechtsinhaber stellt das Programm „wie es ist“ zur
-        Verfügung. Es werden einschließlich Marktreife oder Verwendbarkeit für einen bestimmten Zweck
-        keinerlei Eigenschaften zugesichert.Das volle Risiko bezüglich Qualität, Leistungsfähigkeit oder
-        jeglicher allgemeiner oder spezieller Schäden, Schäden durch Nebenwirkungen oder Folgeschäden, die
-        aus Benutzung oder Unbenutzbarkeit des Programms folgen (einschließlich Datenverlusten oder
-        fehlerhafter Verarbeitung von Daten)liegt auf Seiten des Anwenders / der Anwenderin.
+        {{ 'useragreement.notice4' | translate }}
 
 
       </p>
