add translation for create-vm

--- a/src/app/create-vm/create-vm.component.html
+++ b/src/app/create-vm/create-vm.component.html
@@ -13,10 +13,10 @@
   <div class="row white-font">
     <div class="col-12">
       <h4>
-        Neue VM anlegen
+        {{ 'createvm.create' | translate }}
       </h4>
       <p>
-        Bitte wählen Sie eine virtuelle Maschine zum Hochladen aus.
+        {{ 'createvm.chosevm' | translate }}
       </p>
       <br>
     </div>
@@ -26,17 +26,17 @@
       <div class="col-12">
         <div class="form-group row">
           <div class="col-12">
-            <h4>Virtuelle Maschine</h4>
+            <h4> {{ 'createvm.vm' | translate }} </h4>
           </div>
         </div>
         <div class="form-group row">
-          <label class="control-label description col-12 col-md-4 col-lg-3 col-xl-3" for="vmx">.vmx-Datei *</label>
+          <label class="control-label description col-12 col-md-4 col-lg-3 col-xl-3" for="vmx"> {{ 'createvm.vmx' | translate }} </label>
           <div class="col-12 col-md-8">
             <input accept=".vmx" type='file' (change)="onSelectFile($event); hasChanged()" id="vmx">
           </div>
         </div>
         <div class="form-group row">
-          <label class="control-label description col-12 col-md-4 col-lg-3 col-xl-3" for="vmdk">.vmdk-Datei *</label>
+          <label class="control-label description col-12 col-md-4 col-lg-3 col-xl-3" for="vmdk"> {{ 'createvm.vmdk' | translate }} </label>
           <div class="col-12 col-md-8">
             <input accept=".vmdk" type='file' (change)="onSelectFile($event); hasChanged()" id="vmdk">
           </div>
@@ -47,21 +47,17 @@
             <input type="text" class="form-control" id="vmname" name="name" formControlName="imageName"
             [ngClass]="{ 'is-invalid': submitted && form.imageName.errors }" (change)="hasChanged()">
             <div *ngIf="submitted && form.imageName.errors" class="invalid">
-              <span *ngIf="form.imageName.errors.required"><i class="fa fa-exclamation-triangle"></i> VM-Name darf nicht leer sein</span>
+              <span *ngIf="form.imageName.errors.required"><i class="fa fa-exclamation-triangle"></i> {{ 'createvm.notempty' | translate }} </span>
             </div>
           </div>
         </div>
         <div class="form-group-row">
-          <h6>Hinweis</h6>
+          <h6> {{ 'createvm.notice' | translate }} </h6>
           <p>
-            Haben Sie noch keine eigene virtuelle Maschine erstellt, können Sie sich in der Übersicht
-            eine virtuelle Maschine als Vorlage herunterladen, diese an Ihre Bedürfnisse anpassen und
-            anschließend über diesen Assistenzen hochladen.
+            {{ 'createvm.notice2' | translate }}
           </p>
           <p>
-            Wenn Sie die VM einer bestehenden Veranstaltung aktualisieren möchten, öffnen Sie die
-            Detailansicht der bestehenden VM und wählen Sie 'Neue VM-Version hochladen'. Dadurch bleiben
-            bestehende Berechtigungen, sowie Verknüpfungen zu Veranstaltungen erhalten.
+            {{ 'createvm.notice3' | translate }}
           </p>
         </div>
       </div>
@@ -70,17 +66,17 @@
       <div class="col-12">
         <hr class="whiteHr">
         <h4>
-          Metadaten
+          {{ 'createvm.metadata' | translate }}
         </h4>
         <p>
-          Fügen Sie eine Beschreibung hinzu.
+          {{ 'createvm.insertdescription' | translate }}
         </p>
       </div>
     </div>
     <div class="row white-font">
       <div class="col-12">
         <div class="form-group row">
-          <label class="control-label col-12 col-sm-4 col-md-4 col-lg-3 col-xl-3 description" for="betriebsystem">Betriebssystem *</label>
+          <label class="control-label col-12 col-sm-4 col-md-4 col-lg-3 col-xl-3 description" for="betriebsystem"> {{ 'createvm.os' | translate }} </label>
           <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <select id="betriebsystem" class="form-control text-box" formControlName="osId" (change)="hasChanged()">
               <option *ngFor="let os of osList; let i = index" [value]="i+1">{{os}}</option>
@@ -88,12 +84,12 @@
           </div>
         </div>
         <div class="form-group row">
-          <label class="control-label col-12  col-lg-3 col-xl-3 description" for="beschreibung">Beschreibung *</label>
+          <label class="control-label col-12  col-lg-3 col-xl-3 description" for="beschreibung"> {{ 'createvm.description' | translate }} </label>
           <div class="col-12 col-lg-9">
             <textarea name="beschreibung" class="form-control" formControlName="description" id="beschreibung"
             [ngClass]="{ 'is-invalid': submitted && form.description.errors }" (change)="hasChanged()"></textarea>
             <div *ngIf="submitted && form.description.errors" class="invalid">
-              <span *ngIf="form.description.errors.required"><i class="fa fa-exclamation-triangle"></i> Beschreibung darf nicht leer sein</span>
+              <span *ngIf="form.description.errors.required"><i class="fa fa-exclamation-triangle"></i> {{ 'createvm.descriptionnotempty' | translate }} </span>
             </div>
           </div>
         </div>
@@ -109,10 +105,10 @@
       <div class="col-12">
         <hr class="whiteHr">
         <h4>
-          Berechtigungen festlegen
+          {{ 'createvm.addpermission' | translate }}
         </h4>
         <p>
-          Legen Sie hier die gewünschten Berechtigungen fest.
+          {{ 'createvm.setpermission' | translate }}
         </p>
       </div>
     </div>
@@ -122,10 +118,10 @@
           <thead>
           <tr>
             <th></th>
-            <th>Benutzer</th>
-            <th>Verlinken</th>
+            <th>{{ 'createvm.user' | translate }}</th>
+            <th>{{ 'createvm.link' | translate }}</th>
             <th>Download</th>
-            <th>Bearbeiten</th>
+            <th>{{ 'createvm.edit' | translate }}</th>
             <th>Admin</th>
           </tr>
           </thead>
@@ -152,7 +148,7 @@
             </mat-autocomplete>
           </div>
           <label class="control-label col-12 col-md-3 push" for="newUserName" (click)="addUser()">
-            <b><i class="fa fa-plus fontawesomeicons"></i> Benutzer hinzufügen</b>
+            <b><i class="fa fa-plus fontawesomeicons"></i> {{ 'createvm.adduser' | translate }} </b>
           </label>
         </div>
       </div>
@@ -160,16 +156,16 @@
     <div class="row white-font">
       <div class="col-12 mt-5">
         <h4>
-          Standardberechtigungen
+          {{ 'createvm.standardpermissions' | translate }} 
         </h4>
         <p>
-          Hier können Sie die Rechte für nicht in der Liste angegebene Nutzer festlegen
+          {{ 'createvm.permissionlist' | translate }}
         </p>
 
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="verlinken-vm" value="" formControlName="link"
                  (change)="hasChanged()">
-          <label class="form-check-label" for="verlinken-vm">Verlinken</label>
+          <label class="form-check-label" for="verlinken-vm"> {{ 'createvm.link' | translate }} </label>
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="download-vm" value="" formControlName="download"
@@ -179,7 +175,7 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="bearbeiten-vm" value="" formControlName="edit"
                   (change)="hasChanged()">
-          <label class="form-check-label" for="bearbeiten-vm">Bearbeiten</label>
+          <label class="form-check-label" for="bearbeiten-vm"> {{ 'createvm.edit' | translate }} </label>
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="admin-vm" value="" formControlName="admin"
@@ -194,13 +190,13 @@
           <div class="col-5">
             <button class="button text-box" id="abbrechen" (click)="stashChanges()">
               <i class="fa fa-times-circle"></i>
-              <b> Abbrechen </b>
+              <b> {{ 'createvm.cancel' | translate }} </b>
             </button>
           </div>
           <div class=" offset-1 col-6 text-right">
             <button type="submit" class="button text-box ml-4"  [ngClass]="{ 'invalid': submitted && this.createVmForm.invalid}">
               <i class="fa fa-check-circle"></i>
-              <b> Fertigstellen</b></button>
+              <b> {{ 'createvm.finish' | translate }}</b></button>
           </div>
         </div>
       </div>
